<resources>
    <string name="app_name">ConferenceScheduler</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="radio1">Admin</string>
    <string name="radio2">Doctor</string>
    <string name="register">Register</string>
</resources>
