<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="rohanparekh.conferencescheduler.Register">

    <LinearLayout
        android:id="@+id/innerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radioLayout_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">


            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio1" />


            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/radio2" />

        </RadioGroup>

        <EditText
            android:id="@+id/userName_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/userName"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/password_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/confirmPassword_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPassword"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20dp" />

        <LinearLayout
            android:id="@+id/buttonLayout_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/registerButton"
                style="@style/Base.TextAppearance.AppCompat.Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/register" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>